# DroneROS

./: .gitattributes  .gitignore  .gitmodules  ByteTrack-install.txt  README.md  mav.parm  mav.tlog  mav.tlog.raw  onnx-gpu.txt  requirements.txt  torch_cuda12-2_R36-3.txt
opencv_gst_install/: README.md  build_opencv_jetson.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/opencv_gst_install/: build_opencv_jetson.sh
ros2_ws/src/calibration/: package.xml  setup.py
ros2_ws/src/calibration/calibration/: camera_rectification_node.py  stereo_calibration_node.py
ros2_ws/src/controls/: package.xml  setup.py
ros2_ws/src/diagnostics/: setup.py
ros2_ws/src/hmi/: package.xml  setup.py
ros2_ws/src/hmi/hmi/: app.py  base_stream_viewer.py  hmi_server_node.py
ros2_ws/src/hmi/static/: index.html  main.css  main.js
ros2_ws/src/msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/msgs/msg/: AutofocusStatus.msg  (+5 more)
ros2_ws/src/navigation/: setup.py
ros2_ws/src/perception/: package.xml  setup.py
ros2_ws/src/perception/launch/: camera_launch.py  visualizer_launch.py
ros2_ws/src/perception/perception/: autofocus_node.py  bag2mp4.py  bbox_overlay_node.py  byte_track_node.py  camera_gpu_node.py  camera_node.py  camera_rectification_node.py  camera_splitter_node.py  classification_node.py  depth2pcl_node.py  depth_visualizer_node.py  id_mapper_node.py  manual_focus_node.py  object_depth_fusion_node.py  object_depth_fusion_tracked_node.py  object_detection_node.py  speed_estimator_node.py  stereo_depth_node.py  stitch_stream_node.py  sync_capture_node.py  tracked_bbox_overlay_node.py  traffic_light_classification_node.py
ros2_ws/src/perception/perception/csrc/: nvbuf_egl_bridge.c  nvmm_cuda_bridge.cu
ros2_ws/src/perception/perception/focus_tools/: autofocus.py  focuser.py
ros2_ws/src/perception/resource/models/: coco_id_map.yaml  documentation.txt  id_map.yaml
(+108 files in other folders)
