<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hmi</name>
  <version>0.0.0</version>
  <description>Manage Humn-Device Interface for the user to customize missions.</description>
  <maintainer email="anhphanvt2705@gmail.com">anhphan</maintainer>
  <license>Private</license>

  <exec_depend>python3</exec_depend>
  <exec_depend>fastapi</exec_depend>
  <exec_depend>uvicorn</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
