<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>0.0.1</version>
  <description>Manage all perception devices in the RP-1 Base Station</description>
  <maintainer email="anhphanvt2705@gmail.com">anhphan</maintainer>
  <license>Private</license>

  <!-- Required dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>
  <depend>yaml-cpp</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <launch>
      <launch_file>launch/camera_launch.py</launch_file>
    </launch>
  </export>
</package>
